--- a/simulateur/simulation/templates/simulation/graph.html
+++ b/simulateur/simulation/templates/simulation/graph.html
@@ -220,8 +220,12 @@
             socket.onmessage = function (e) {
                 console.log("Message received: " + e.data);
                 const messageData = JSON.parse(e.data);
-                addMessage(messageData);
-                updateChart(messageData);
+                if (messageData.name && messageData.timestamp) {
+                    addMessage(messageData);
+                    updateChart(messageData);
+                } else {
+                    console.warn("Received malformed message:", messageData);
+                }
             };
 
             socket.onclose = function (e) {
@@ -230,7 +234,7 @@
             };
 
             socket.onerror = function (e) {
-                console.log("WebSocket error: "+ e.data);
+                console.log("WebSocket error: " + e.data);
                 document.getElementById('messages').innerHTML += "<p class='bg-red-100 text-red-800 p-2 rounded'>WebSocket error: " + e.data + "</p>";
             };
 
@@ -279,6 +283,10 @@
 
         function updateChart(message) {
             const companyName = message.name;
+            if (!data[companyName] || !data[companyName].datasets) {
+                console.warn(`Chart data for ${companyName} is not initialized correctly.`);
+                return;
+            }
             const ohlcData = {
                 x: new Date(message.timestamp),
                 o: message.open,
